Stack inputs and labels on small screens

--- a/src/app/pages/join/join.html
+++ b/src/app/pages/join/join.html
@@ -22,28 +22,28 @@
                 </label>
                 <fieldset>
                     <legend>Volunteer to:</legend>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="attend_events">Attend Events
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="canvass">Knock on Doors
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="phonebank">Make Phone Calls
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="yard_signs">Setup Yard Signs
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="data_entry">Enter Data
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="research">Perform Research
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="house_party">Host a House Party
                     </label>
-                    <label>
+                    <label class="inline">
                         <input type="checkbox" name="organize">Recruit & Organize
                     </label>
                 </fieldset>
