Make 'Contribute' button on yard sign full width

--- a/src/app/pages/yardsign/yardsign.html
+++ b/src/app/pages/yardsign/yardsign.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="banner curved-bottom{model.requested ? ' requested' : ''}"></div>
     <article>
-        <if condition="!model.requested">
+        <if condition="model.requested">
             <h1>Join the Fight — Get a Yard Sign</h1>
 
             <form>
@@ -48,9 +48,7 @@
                 Please also consider contributing so we can provide others with free yard signs.
             </p>
 
-            <p class="center">
-                <a class="btn btn-red" href="https://derekkent.com/donate">Contribute</a>
-            </p>
+            <a class="btn btn-red contribute" href="https://derekkent.com/donate">Contribute</a>
         </if>
     </article>
 </template>
