--- a/src/app/pages/yardsign/yardsign.scss
+++ b/src/app/pages/yardsign/yardsign.scss
@@ -24,7 +24,8 @@
         margin-top: 1em;
     }
 
-    .center {
-        text-align: center;
+    .contribute {
+        display: block;
+        margin-top: 3rem;
     }
 }
