Add endorsements page

--- a/src/app/components/shell/endorsements/endorsements.html
+++ b/src/app/components/shell/endorsements/endorsements.html
@@ -1,5 +1,6 @@
 <template args="endorsements">
-    <h2>Endorsed By</h2>
+    <h2>Endorsements</h2>
+    <div class="view-all"><a href="/endorsements">View All</a></div>
     <ul>
         <li each="endorsement in endorsements">
             <a href="{endorsement.link}" rel="nofollow">
