--- a/src/app/components/shell/endorsements/endorsements.scss
+++ b/src/app/components/shell/endorsements/endorsements.scss
@@ -10,7 +10,7 @@
         font-family: $sans-serif;
         font-size: 2rem;
         letter-spacing: 0.1rem;
-        margin-bottom: 3rem;
+        margin-bottom: 0;
         text-align: center;
         text-transform: uppercase;
     }
@@ -37,6 +37,18 @@
         img {
             max-height: 10rem;
             max-width: 100%;
+        }
+    }
+
+    .view-all {
+        font-family: $sans-serif;
+        font-size: 1.3rem;
+        margin-bottom: 3rem;
+        text-align: center;
+
+        a {
+            color: color(white);
+            text-transform: uppercase;
         }
     }
 }
