Stack endorsements on small screens

--- a/src/app/pages/endorsements/endorsements.scss
+++ b/src/app/pages/endorsements/endorsements.scss
@@ -21,6 +21,10 @@
     li {
         flex: 0 0 33%;
 
+        @include mobile {
+            flex: 0 0 100%;
+        }
+
         img {
             padding: 2rem;
             width: 100%;
