--- a/src/app/components/shell/endorsements/endorsements.scss
+++ b/src/app/components/shell/endorsements/endorsements.scss
@@ -31,9 +31,11 @@
         display: flex;
         flex: 1 1 25%;
         justify-content: center;
+        padding: 0 2rem;
 
         @include mobile {
-            flex: 0 0 50%;
+            flex: 0 0 100%;
+            padding: 1rem;
         }
 
         img {
