Improve citation clarity by adding names

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -209,69 +209,69 @@
 
         <ol class="citations{model.citations ? '' : ' hidden'}">
             <li>
-                Received a <a href="http://votesmart.org/interest-group/910/rating/9013">100%
+                Mark and Ted both received a <a href="http://votesmart.org/interest-group/910/rating/9013">100%
                 voting record</a> from the anti-choice group Maryland Right to Life.
             </li>
             <li>
-                <a href="//openstates.org/md/bills/2016/HB603/">Co-sponsored</a> anti-abortion bill
-                (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0603F.pdf">HB603 - 2016</a>).
+                Mark and Ted both <a href="//openstates.org/md/bills/2016/HB603/">co-sponsored</a> the anti-abortion bill
+                <a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0603F.pdf">HB603 - 2016</a>.
             </li>
             <li>
-                <a href="https://votesmart.org/interest-group/910/maryland-right-to-life">Endorsed</a>
+                Mark and Ted were both <a href="https://votesmart.org/interest-group/910/maryland-right-to-life">endorsed</a>
                 by anti-choice group Maryland Right to Life</a> in 2014.
             </li>
             <li>
-                <a href="//openstates.org/md/bills/2017/HB1167/">Co-sponsored</a> anti-abortion bill
-                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1167f.pdf">HB1167 - 2017</a>).
+                Mark and Ted both <a href="//openstates.org/md/bills/2017/HB1167/">co-sponsored</a> the anti-abortion bill
+                <a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1167f.pdf">HB1167 - 2017</a>.
             </li>
             <li>
-                <a href="//openstates.org/md/votes/MDV00027155/">Voted against</a> funding
+                Mark and Ted both <a href="//openstates.org/md/votes/MDV00027155/">voted against</a> funding
                 Planned Parenthood
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1083t.pdf">HB1083 — 2017</a>).
             </li>
             <li>
-                Voted against Pro-LGBTQ legislation
+                Mark and Ted both voted against Pro-LGBTQ legislation
                 (<a href="//openstates.org/md/votes/MDV00020156/">SB743 — 2015</a>).
                 Only one other Democrat voted against it.
             </li>
             <li>
-                <a href="https://votesmart.org/interest-group/2149/protect-marriage-maryland">Endorsed</a>
+                Mark was <a href="https://votesmart.org/interest-group/2149/protect-marriage-maryland">endorsed</a>
                 by anti-gay marriage group Protect Marriage Maryland in 2014.
             </li>
             <li>
-                Received a <a href="https://votesmart.org/interest-group/912/rating/4334">0%
+                Ted received a <a href="https://votesmart.org/interest-group/912/rating/4334">0%
                 rating</a> from Equality Maryland in 2008.</a>
             </li>
             <li>
-                <a href="//openstates.org/md/votes/MDV00020673/">Voted against</a> repealing
+                Mark and Ted both <a href="//openstates.org/md/votes/MDV00020673/">voted against</a> repealing
                 mandatory minimum sentences for drug-related offenses.
                 (<a href="http://mgaleg.maryland.gov/2015RS/Chapters_noln/CH_490_hb0121e.pdf">HB121 - 2015</a>).
             </li>
             <li>
-                <a href="//openstates.org/md/votes/MDV00019608/">Voted against</a> expunging
+                Mark and Ted both <a href="//openstates.org/md/votes/MDV00019608/">voted against</a> expunging
                 convictions for crimes that no longer exist.
                 (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0124t.pdf">HB124 - 2015</a>).
             </li>
             <li>
-                <a href="//openstates.org/md/votes/MDV00019608/">Voted against</a> restoring
+                Mark and Ted both <a href="//openstates.org/md/votes/MDV00019608/">voted against</a> restoring
                 voting rights to ex-felons who served their time.
                 (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0980t.pdf">HB980 - 2015</a>).
             </li>
             <li>
-                ONLY Democrats who <a href="//openstates.org/md/bills/2017/HB1418/">voted against</a> the
+                Mark and Ted were the ONLY Democrats who <a href="//openstates.org/md/bills/2017/HB1418/">voted against</a> the
                 Justice Reinvestment Act modifications.
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1418t.pdf">HB1418 - 2017</a>).
             </li>
             <li>
-                <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a> by the NRA in 2014.
+                Ted was <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">endorsed</a> by the NRA in 2014.
             </li>
             <li>
-                <a href="//openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
+                Ted <a href="//openstates.org/md/bills/2016/HB1002/">voted against</a> banning
                 firearms from college campuses.
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb1002t.pdf">HB1002 - 2016</a>).
             </li>
             <li>
-                <a href="//openstates.org/md/bills/2017/HB1362/">Voted against</a> banning
+                Mark and Ted both <a href="//openstates.org/md/bills/2017/HB1362/">voted against</a> banning
                 a Muslim registry and preventing police from acting as immigration agents.
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1362t.pdf">HB1362 - 2017</a>).
             </li>
