Remove references to Ted Sophocleus

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -99,16 +99,13 @@
             <colgroup>
                 <col>
                 <col class="derek">
-                <col class="other pam">
                 <col class="other mark">
-                <col class="other ted">
             </colgroup>
             <thead>
                 <tr>
                     <th scope="col"></th>
                     <th scope="col"><img src="/images/kent.svg" alt="Derek Kent" width="120"></th>
                     <th scope="col">Mark Chang</th>
-                    <th scope="col">Ted Sophocleus</th>
                 </tr>
             </thead>
             <tbody>
@@ -120,7 +117,6 @@
                         </a>
                     </td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3, 4</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3, 4</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Women's Health</th>
@@ -129,7 +125,6 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>5</sup></td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>5</sup></td>
                 </tr>
                 <tr>
@@ -140,7 +135,6 @@
                         </a>
                     </td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>6, 7</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>6, 8</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Criminal Justice Reform</th>
@@ -149,8 +143,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>9, 10, 11, 12</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>9, 10, 11, 12</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10, 11</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">$15 Minimum Wage</th>
@@ -159,7 +152,6 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                 </tr>
                 <tr>
@@ -170,7 +162,6 @@
                         </a>
                     </td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
                 <tr>
                     <th scope="row">Responsible Gun Rights</th>
@@ -180,15 +171,13 @@
                         </a>
                     </td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>13, 14</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Pro-Immigrant</th>
                     <td>
                         <img src="/images/icons/check.svg" alt="yes">
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>15</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>15</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -197,7 +186,6 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
                     <td><img src="/images/icons/x.svg" alt="no"></td>
                 </tr>
             </tbody>
@@ -209,69 +197,55 @@
 
         <ol class="citations{model.citations ? '' : ' hidden'}">
             <li>
-                Mark and Ted both received a <a href="http://votesmart.org/interest-group/910/rating/9013">100%
+                Mark received a <a href="http://votesmart.org/interest-group/910/rating/9013">100%
                 voting record</a> from the anti-choice group Maryland Right to Life.
             </li>
             <li>
-                Mark and Ted both <a href="//openstates.org/md/bills/2016/HB603/">co-sponsored</a> the anti-abortion bill
+                Mark <a href="//openstates.org/md/bills/2016/HB603/">co-sponsored</a> the anti-abortion bill
                 <a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0603F.pdf">HB603 - 2016</a>.
             </li>
             <li>
-                Mark and Ted were both <a href="https://votesmart.org/interest-group/910/maryland-right-to-life">endorsed</a>
+                Mark was <a href="https://votesmart.org/interest-group/910/maryland-right-to-life">endorsed</a>
                 by anti-choice group Maryland Right to Life</a> in 2014.
             </li>
             <li>
-                Mark and Ted both <a href="//openstates.org/md/bills/2017/HB1167/">co-sponsored</a> the anti-abortion bill
+                Mark <a href="//openstates.org/md/bills/2017/HB1167/">co-sponsored</a> the anti-abortion bill
                 <a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1167f.pdf">HB1167 - 2017</a>.
             </li>
             <li>
-                Mark and Ted both <a href="//openstates.org/md/votes/MDV00027155/">voted against</a> funding
+                Mark <a href="//openstates.org/md/votes/MDV00027155/">voted against</a> funding
                 Planned Parenthood
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1083t.pdf">HB1083 — 2017</a>).
             </li>
             <li>
-                Mark and Ted both voted against Pro-LGBTQ legislation
+                Mark was one of only three Democrats who voted against Pro-LGBTQ legislation
                 (<a href="//openstates.org/md/votes/MDV00020156/">SB743 — 2015</a>).
-                Only one other Democrat voted against it.
             </li>
             <li>
                 Mark was <a href="https://votesmart.org/interest-group/2149/protect-marriage-maryland">endorsed</a>
                 by anti-gay marriage group Protect Marriage Maryland in 2014.
             </li>
             <li>
-                Ted received a <a href="https://votesmart.org/interest-group/912/rating/4334">0%
-                rating</a> from Equality Maryland in 2008.</a>
-            </li>
-            <li>
-                Mark and Ted both <a href="//openstates.org/md/votes/MDV00020673/">voted against</a> repealing
+                Mark <a href="//openstates.org/md/votes/MDV00020673/">voted against</a> repealing
                 mandatory minimum sentences for drug-related offenses.
                 (<a href="http://mgaleg.maryland.gov/2015RS/Chapters_noln/CH_490_hb0121e.pdf">HB121 - 2015</a>).
             </li>
             <li>
-                Mark and Ted both <a href="//openstates.org/md/votes/MDV00019608/">voted against</a> expunging
+                Mark <a href="//openstates.org/md/votes/MDV00019608/">voted against</a> expunging
                 convictions for crimes that no longer exist.
                 (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0124t.pdf">HB124 - 2015</a>).
             </li>
             <li>
-                Mark and Ted both <a href="//openstates.org/md/votes/MDV00019608/">voted against</a> restoring
+                Mark <a href="//openstates.org/md/votes/MDV00019608/">voted against</a> restoring
                 voting rights to ex-felons who served their time.
                 (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0980t.pdf">HB980 - 2015</a>).
             </li>
             <li>
-                Mark and Ted were the ONLY Democrats who <a href="//openstates.org/md/bills/2017/HB1418/">voted against</a> the
-                Justice Reinvestment Act modifications.
+                Mark was one of only two Democrats who <a href="//openstates.org/md/bills/2017/HB1418/">voted against</a> the Justice Reinvestment Act modifications.
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1418t.pdf">HB1418 - 2017</a>).
             </li>
             <li>
-                Ted was <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">endorsed</a> by the NRA in 2014.
-            </li>
-            <li>
-                Ted <a href="//openstates.org/md/bills/2016/HB1002/">voted against</a> banning
-                firearms from college campuses.
-                (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb1002t.pdf">HB1002 - 2016</a>).
-            </li>
-            <li>
-                Mark and Ted both <a href="//openstates.org/md/bills/2017/HB1362/">voted against</a> banning
+                Mark <a href="//openstates.org/md/bills/2017/HB1362/">voted against</a> banning
                 a Muslim registry and preventing police from acting as immigration agents.
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1362t.pdf">HB1362 - 2017</a>).
             </li>
