--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -41,10 +41,11 @@
         </p>
 
         <p>
-            Delegates Mark Chang and Ted Sophocleus both <a href="http://openstates.org/md/votes/MDV00019608/">voted against</a> legislation that authorized people to have convictions which
+            Delegate Mark Chang <a href="http://openstates.org/md/votes/MDV00019608/">voted against</a>
+            legislation that authorized people to have convictions which
             are no longer considered crimes to be expunged from their record — convictions
             that overwhelmingly targeted people of color. The legislation was so
-            popular it passed unanimously in the Senate and was opposed by only two
+            popular it passed unanimously in the Senate and was opposed by only three
             other Democrats in the entire House!
         </p>
 
@@ -55,9 +56,9 @@
         </p>
 
         <p>
-            Delegates Chang and Sophocleus <a href="http://openstates.org/md/votes/MDV00020141/">voted
+            Delegate Chang <a href="http://openstates.org/md/votes/MDV00020141/">voted
             against</a> returning voting rights to felons who served their time and were released —
-            only 4 other Democrats in the House joined them.
+            only 5 other Democrats in the House joined him.
         </p>
 
         <p>
