--- a/src/app/components/shell/endorsements/endorsements.scss
+++ b/src/app/components/shell/endorsements/endorsements.scss
@@ -54,6 +54,10 @@
         a {
             color: color(white);
             text-transform: uppercase;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
