--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -45,7 +45,7 @@
 
         <div class="youtube-video-wrapper">
             <div class="youtube-video">
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/BY1OKSObkH0" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/A9QuttG8IuQ" frameborder="0" allowfullscreen sandbox="allow-scripts allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-forms allow-presentation"></iframe>
             </div>
         </div>
 
